--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <link rel="stylesheet" href="css/styles.css">
         <script type="module" src="js/app.js"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <!---stylesheet link here--->
         <title>gertie may</title>
         
