--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </header>
         <!-- center block heading & menu -->
         <main>
-            <section id="section1" data-nav="Kissing In Public" class="__active">
+            <section id="section1" data-nav="Kissing In Public">
                 <div class="landing__container">
                     <h2>Kissing In Public</h2>
                     <p class="blurb">I wrote this song in early 2020. For me it's about that feeling when you're in a new relationship, where you are just completely obsessed with the other person and can't bear the thought of not being with them. That often irrational 'all in' feeling.</p>
