--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
                 <div class="landing__container">
                     <h2>Kissing In Public</h2>
                     <p class="blurb">I wrote this song in early 2020. For me it's about that feeling when you're in a new relationship, where you are just completely obsessed with the other person and can't bear the thought of not being with them. That often irrational 'all in' feeling.</p>
-                    <button class="toggle"> View Lyrics </button>
+                    <div class="separator"></div>
+                    <button class="toggle"><em>View Lyrics </em></button>
                     <div class="lyrics">
                         <p>I’ve become accustomed to kissing in public<br>
                         Holding hands when it’s too hot to breathe<br>
@@ -69,7 +70,8 @@
                 <div class="landing__container">
                     <h2>Shivers</h2>
                     <p class="blurb">This song is about a tipping point for me, a moment of clarity. It tells the story of that short lived love, when you meet someone perfect and you know that you'll never see them again, but also that you'll be thinking of them for the rest of your life.</p>
-                    <button class="toggle"> View Lyrics </button>
+                    <div class="separator"></div>
+                    <button class="toggle"> <em>View Lyrics </em> </button>
                     <div class="lyrics">
                         <p>
                         waiting, passing time<br>
@@ -123,7 +125,8 @@
                 <div class="landing__container">
                     <h2>I Hope This Feeling Doesn't Last</h2>
                     <p class="blurb">Blurb</p>
-                    <button class="toggle"> View Lyrics </button>
+                    <div class="separator"></div>
+                    <button class="toggle"><em>View Lyrics</em></button>
                     <div class="lyrics">
                         <p>
                         sometimes my fingertips arent good enough <br>
@@ -166,7 +169,8 @@
                 <div class="landing__container">
                     <h2>About You</h2>
                     <p class="blurb">Blurb</p>
-                    <button class="toggle"> View Lyrics </button>
+                    <div class="separator"></div>
+                    <button class="toggle"><em>View Lyrics</em></button>
                     <div class="lyrics">
                         <p>
                         my eyes are carrying the moon<br>
