--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             <section id="section4" data-nav="About You">
                 <div class="landing__container">
                     <h2>About You</h2>
-                    <p class="blurb">Blurb</p>
+                    <p class="blurb">A song encapsulating that feeling of anxiety when you know you're being left behind. When you care for someone more than they care for you. How sleepless nights can only exacerbate those emotions, heighten that sense that something is not right.</p>
                     <div class="separator"></div>
                     <button class="toggle"><em>View Lyrics</em></button>
                     <div class="lyrics">
