--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <section id="section3" data-nav="I Hope This Feeling Doesn't Last">
                 <div class="landing__container">
                     <h2>I Hope This Feeling Doesn't Last</h2>
-                    <p class="blurb">Blurb</p>
+                    <p class="blurb">This song is about a tipping point for me, a moment of clarity. It tells the story of that short lived love, when you meet someone perfect and you know that you'll never see them again, but also that you'll be thinking of them for the rest of your life.</p>
                     <div class="separator"></div>
                     <button class="toggle"><em>View Lyrics</em></button>
                     <div class="lyrics">
